--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,6 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
 
+    <string name="title_activity_fullscreen2">FullscreenActivity2</string>
+
 </resources>
